load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.json",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.ipp",
        "include/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        "@boost.align",
        "@boost.assert",
        "@boost.config",
        "@boost.container",
        "@boost.container_hash",
        "@boost.core",
        "@boost.describe",
        "@boost.mp11",
        "@boost.system",
        "@boost.throw_exception",
    ],
)
